--- a/javascript-pwn/00-Ramdom-Folder/index.html
+++ b/javascript-pwn/00-Ramdom-Folder/index.html
@@ -7,6 +7,7 @@
     <title>A Closer Look at Functions</title>
   </head>
   <body>
+    <h1>section 0</h1>
     <script src="script.js"></script>
   </body>
 </html>
